Configure API for localhost:3000/api
